ifcc-test-output/testfiles-12-1_complete_arithmetic_test/gcc-compile.txt
input.c: In function ‘main’:
input.c:3:5: error: expected ‘,’ or ‘;’ before ‘return’
    3 |     return 2 + a * 2 + (3 + 4) * a;
      |     ^~~~~~

exit status: 1
